--- a/source/backoffice/package.json
+++ b/source/backoffice/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3001",
     "dev:clean": "rm -rf .next && next dev -p 3001",
     "build": "next build",
-    "start": "PORT=${PORT:-3001} next start -p $PORT",
+    "start": "next start -H 0.0.0.0 -p ${PORT:-3001}",
     "lint": "next lint"
   },
   "dependencies": {
